removed P narrow to fix wedding details alignment, added font stack to h1-style for sans serif appearance

--- a/main.css
+++ b/main.css
@@ -69,7 +69,7 @@ body
 h1 {
   border-bottom: 0px solid black;
   color: salmon;
-  font-family: 'oswald';
+  font-family: 'oswald, open sans, arial';
   font-size: 4em;
   font-weight: 200;
   font-stretch: normal;
